完成布局我们的团队
明天接着写该页面js

--- a/src/html/aboutUS/wzTeam.html
+++ b/src/html/aboutUS/wzTeam.html
@@ -38,7 +38,6 @@
                     <li><a href="../servicePro/copyright.html"> 版权登记</a></li>
                     <li><a href="../servicePro/projectApplication.html"> 项目申报</a></li>
                 </ul>
-                ..
             </li>
             <li class="double">
                 <h3><a href="../cases/index.html">成功案例</a></h3>
@@ -89,6 +88,79 @@
         </ul>
     </nav>
 </header>
+
+<!--Banner-->
+<section class="banner">
+    <img src="../../img/focusImg/banner-3.png" alt="" class="response-img">
+</section>
+
+
+<!--TabBar-->
+<section class="aboutUs-tabBar">
+    <section class="container clearfix">
+        <section class="aboutCurrent fl">
+            <h4> ABOUT <i>US</i></h4>
+            <span><b>关于我们</b><strong>这里象征着我们的态度和能力</strong></span>
+        </section>
+        <menu class="tab fr">
+            <ul>
+                <li><a href="../aboutUS/index.html">走进维正</a></li>
+                <li><a href="../aboutUS/wzCulture.html">维正文化</a></li>
+                <li><a href="../aboutUS/wzDevelopment.html">发展历程</a></li>
+                <li class="active"><a href="../aboutUS/wzTeam.html">维正团队</a></li>
+            </ul>
+        </menu>
+    </section>
+</section>
+
+<!--TextInfo-->
+<section class="aboutUs-content container description-text">
+    <section class="toTable box">
+        <label><i>CULTURE</i>维正</label>
+        <h3>团队</h3>
+        <section class="text">
+            <strong class="tip">维正人的万种情怀</strong>
+            <p>
+                北京维正专利代理有限公司拥有一支稳健务实的管理团队，他们不但拥有丰富的行业经验及专业素质，更具有敏锐的市场意识以及卓越的管理能力！在他们的带领下，维正以领先业界的服务理念和全面创新的服务模式，秉承“提升全天下企业的核心竞争力”的伟大使命，引领知识产权服务发展方向，推进中国知识产权产业化不断发展前行。
+            </p>
+        </section>
+    </section>
+</section>
+
+
+<!--Content-->
+<section id="team-show" class="container">
+    <ul>
+        
+    </ul>
+</section>
+
+<!--弹出面板-->
+<section id="team-pop-wrap" class="hide" style="display:none">
+    <span id="close-btn"></span>
+    <section class="people-pic box">
+        <img src="../../img/case4.png" style="width:285px" height="430px">
+    </section>
+    <section class="people-info box">
+        <h5 class="people-title">
+            <label>销售总监:</label>
+            <span>某某某</span>
+        </h5>
+        <p class="people-info">
+            2009年进入知识产权行业，资深行业代理人，目前担任维正集团销售总监一职；负责项目：广东省家用纺织品行业协会、广州市福江工贸有限公司、高德商城、东风化工实业有限公司、奔力物流、广东一品红药业有限公司，服务对象涵盖事业单位、医院、高校、上市公司等多个行业领域，良好的服务态度、专业的建站解答，蝉联获得“2013年度、2014年度、2015年度销售冠军”
+        </p>
+        <figure class="people-speak">
+            <figcaption class="f28">Ta在说</figcaption>
+            <p>梦想不一定使我们达到远方，但是达到远方的一定有着梦想。</p>
+        </figure>
+        <section class="pop-control">
+            <span class="prev" title="上一个"></span>
+            <span class="next" title="下一个"></span>
+        </section>
+    </section>
+
+</section>
+
 
 <!--SideBar-->
 <aside id="sideBar">
@@ -150,5 +222,6 @@
 <script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
 <script src="../../js/public.js"></script>
 <script src="../../js/common.js"></script>
+<script src="../../js/pages/wzTeam.js"></script>
 </body>
 </html>
