--- a/src/html/servicePro/brandRegist.html
+++ b/src/html/servicePro/brandRegist.html
@@ -92,7 +92,7 @@
 <!--Banner-->
 <section id="sv-banner">
     <a href="#">
-        <img src="../../img/focusImg/slide1.png" class="block response-img" alt="">
+        <img src="../../img/focusImg/banner-1.jpg" class="response-img" alt="">
     </a>
 </section>
 
@@ -107,7 +107,7 @@
         </figure>
         <ul class="container">
             <li><a href="../servicePro/index.html"><em class="icon-Q"></em><span>专利服务</span></a></li>
-            <li class="current"><a href="../servicePro/brandRegist.html"><em class="icon-C"></em><span>商标服务</span></a></li>
+            <li class="current"><a href="../servicePro/brandRegist.html"><em class="icon-C"></em><span>商标服务</span></a> </li>
             <li><a href="../servicePro/copyright.html"><em class="icon-P"></em><span>版权服务</span></a></li>
             <li><a href="../servicePro/projectApplication.html"><em class="icon-E"></em><span>项目申报</span></a></li>
         </ul>
@@ -191,6 +191,7 @@
                     据官方统计，在中国名牌产品的商标中，近50%未在美国、加拿大注册； 近60%未在香港注册；近80%未在澳大利亚注册。中国出口商品商标被 抢注的有2000多起， 造成每年约10亿元无形资产流失。
                 </p>
             </figure>
+            
             <ul>
                 <li>
                     <img src="../../img/client/hasee.png" alt="神舟Hasee">
@@ -227,6 +228,7 @@
         </section>
     </section>
 </article>
+
 <!--SideBar-->
 <aside id="sideBar">
     <ul>
