完成“维正团队”的js编写

--- a/src/html/cases/index.html
+++ b/src/html/cases/index.html
@@ -154,7 +154,7 @@
             </section>
             <section class="lt">
                 <header class="pro-text clearfix">
-                    <h3>移动通信</h3>
+                    <h3>加工制造类</h3>
                     <span>
                     <label>成功案例</label>
                     <sub>这里象征着我们的态度和能力。</sub>
@@ -202,7 +202,7 @@
             </section>
             <section class="rt">
                 <header class="pro-text clearfix">
-                    <h3>加工制造</h3>
+                    <h3>贸易进出口类</h3>
                     <span>
                     <label>成功案例</label>
                     <sub>这里象征着我们的态度和能力。</sub>
@@ -250,7 +250,7 @@
             </section>
             <section class="lt">
                 <header class="pro-text clearfix">
-                    <h3>现代制药</h3>
+                    <h3>科技通讯类</h3>
                     <span>
                     <label>成功案例</label>
                     <sub>这里象征着我们的态度和能力。</sub>
@@ -298,7 +298,7 @@
             </section>
             <section class="rt">
                 <header class="pro-text clearfix">
-                    <h3>贸易进出口</h3>
+                    <h3>现代制药类</h3>
                     <span>
                     <label>成功案例</label>
                     <sub>这里象征着我们的态度和能力。</sub>
@@ -346,7 +346,7 @@
             </section>
             <section class="lt">
                 <header class="pro-text clearfix">
-                    <h3>化学工艺</h3>
+                    <h3>通讯技术类</h3>
                     <span>
                     <label>成功案例</label>
                     <sub>这里象征着我们的态度和能力。</sub>
@@ -394,7 +394,7 @@
             </section>
             <section class="rt">
                 <header class="pro-text clearfix">
-                    <h3>互联网科技</h3>
+                    <h3>化工制药类</h3>
                     <span>
                     <label>成功案例</label>
                     <sub>这里象征着我们的态度和能力。</sub>
@@ -442,7 +442,7 @@
             </section>
             <section class="lt">
                 <header class="pro-text clearfix">
-                    <h3>食品加工</h3>
+                    <h3>食品生产类</h3>
                     <span>
                     <label>成功案例</label>
                     <sub>这里象征着我们的态度和能力。</sub>
@@ -490,7 +490,7 @@
             </section>
             <section class="rt">
                 <header class="pro-text clearfix">
-                    <h3>工程建设</h3>
+                    <h3>工程建设类</h3>
                     <span>
                     <label>成功案例</label>
                     <sub>这里象征着我们的态度和能力。</sub>
@@ -538,7 +538,7 @@
             </section>
             <section class="lt">
                 <header class="pro-text clearfix">
-                    <h3>电子商务</h3>
+                    <h3>电子商务类</h3>
                     <span>
                     <label>成功案例</label>
                     <sub>这里象征着我们的态度和能力。</sub>
