侧栏覆盖所有页面

--- a/src/html/newsCenter/mediaNews.html
+++ b/src/html/newsCenter/mediaNews.html
@@ -148,9 +148,9 @@
 <!--SideBar-->
 <aside id="sideBar">
     <ul>
-        <li><em class="icon-qq"><span>QQ咨询</span></em></li>
-        <li><em class="icon-tel"><span>400-6063708</span></em></li>
-        <li><em class="icon-wechat"></em></li>
+        <li><em class="icon-qq"></em><span><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes">QQ咨询</a> </span></li>
+        <li><em class="icon-tel"></em><span>400-6063708</span></li>
+        <li><em class="icon-wechat"></em><p class="qrImg"><img src="../../img/qrcode.png" alt=""></p></li>
         <li><em class="icon-backtop"></em></li>
     </ul>
 </aside>
