--- a/src/html/contactUs/index.html
+++ b/src/html/contactUs/index.html
@@ -26,14 +26,14 @@
             <ins>维正集团</ins>
         </a>
     </h1>
-
+    
     <nav id="navBar" class="navBar">
         <ul class="nav clearfix">
             <li>
-                <h3><a  href="../index.html">网站首页</a></h3>
+                <h3><a href="../index.html">网站首页</a></h3>
             </li>
             <li>
-                <h3><a  href="../servicePro/index.html">服务项目</a></h3>
+                <h3><a href="../servicePro/index.html">服务项目</a></h3>
                 <ul class="sub">
                     <li><a href="../servicePro/index.html"> 专利咨询</a></li>
                     <li><a href="../servicePro/brandRegist.html"> 商标注册</a></li>
@@ -42,7 +42,7 @@
                 </ul>
             </li>
             <li class="double">
-                <h3><a  href="../cases/index.html">成功案例</a></h3>
+                <h3><a href="../cases/index.html">成功案例</a></h3>
                 <ul class="sub">
                     <li><a href="../cases/index.html#floor1">高等教育</a></li>
                     <li><a href="../cases/index.html#floor2">移动通信</a></li>
@@ -57,10 +57,10 @@
                 </ul>
             </li>
             <li>
-                <h3><a  href="../foolishBird/index.html">傻鸟知服</a></h3>
+                <h3><a href="../foolishBird/index.html">傻鸟知服</a></h3>
             </li>
             <li>
-                <h3><a  href="../newsCenter/index.html">资讯中心</a></h3>
+                <h3><a href="../newsCenter/index.html">资讯中心</a></h3>
                 <ul class="sub">
                     <li><a href="../newsCenter/index.html">企业动态</a></li>
                     <li><a href="../newsCenter/mediaNews.html">媒体关注</a></li>
@@ -69,7 +69,7 @@
                 </ul>
             </li>
             <li>
-                <h3><a  href="../aboutUs/index.html">关于我们</a></h3>
+                <h3><a href="../aboutUs/index.html">关于我们</a></h3>
                 <ul class="sub">
                     <li><a href="../aboutUs/index.html">走进维正</a></li>
                     <li><a href="../aboutUs/wzCulture.html">维正文化</a></li>
@@ -78,14 +78,14 @@
                 </ul>
             </li>
             <li>
-                <h3><a  href="../joinUs/index.html">诚聘英才</a></h3>
+                <h3><a href="../joinUs/index.html">诚聘英才</a></h3>
                 <ul class="sub">
                     <li><a href="../joinUs/index.html">招聘职位</a></li>
                     <li><a href="../joinUs/idea.html">用人理念</a></li>
                 </ul>
             </li>
             <li>
-                <h3 class="active"><a  href="../contactUs/index.html">联系我们</a></h3>
+                <h3 class="active"><a href="../contactUs/index.html">联系我们</a></h3>
             </li>
         </ul>
     </nav>
@@ -330,12 +330,16 @@
     </section>
 </section>
 
+
 <!--SideBar-->
 <aside id="sideBar">
     <ul>
-        <li><em class="icon-qq"><span>QQ咨询</span></em></li>
-        <li><em class="icon-tel"><span>400-6063708</span></em></li>
-        <li><em class="icon-wechat"></em></li>
+        <li><em class="icon-qq"></em><span><a target="_blank"
+                                              href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes">QQ咨询</a> </span>
+        </li>
+        <li><em class="icon-tel"></em><span>400-6063708</span></li>
+        <li><em class="icon-wechat"></em>
+            <p class="qrImg"><img src="../../img/qrcode.png" alt=""></p></li>
         <li><em class="icon-backtop"></em></li>
     </ul>
 </aside>
