依据验收反馈调正

--- a/src/html/cases/index.html
+++ b/src/html/cases/index.html
@@ -97,7 +97,7 @@
 </section>
 
 <!--Content-->
-<article id="cases" class="container">
+<main id="cases" class="container">
     <!--case1-->
     <section id="floor1" class="wrapper">
         <section class="box toTable clearfix">
@@ -576,7 +576,7 @@
             </ul>
         </section>
     </section>
-</article>
+</main>
 
 <!--MenuBar-->
 <aside id="menuBar">
