--- a/src/html/foolishBird/index.html
+++ b/src/html/foolishBird/index.html
@@ -92,7 +92,7 @@
 </header>
 
 <!--Content-->
-<section id="foolishBird-wrap">
+<main id="foolishBird-wrap">
     <section class="container box">
         <header>
             <h2>线上商标业务</h2>
@@ -105,14 +105,14 @@
     </section>
     <section class="device-img">
     </section>
-</section>
+</main>
 
 <!--SideBar-->
 <aside id="sideBar">
     <ul>
         <li><em class="icon-qq"></em><span><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes">QQ咨询</a> </span></li>
         <li><em class="icon-tel"></em><span>400-6063708</span></li>
-        <li><em class="icon-wechat"></em><p class="qrImg"><img src="../../img/qrcode.png" alt=""></p></li>
+        <li><em class="icon-wechat"></em><p class="qrImg"><img ssrc="../../img/qrcode.png" alt=""></p></li>
         <li><em class="icon-backtop"></em></li>
     </ul>
 </aside>
