--- a/src/html/index.html
+++ b/src/html/index.html
@@ -32,6 +32,7 @@
             </li>
             <li>
                 <h3><a href="servicePro/index.html">服务项目</a></h3>
+                
                 <ul class="sub">
                     <li><a href="servicePro/index.html"> 专利咨询</a></li>
                     <li><a href="servicePro/brandRegist.html"> 商标注册</a></li>
@@ -93,10 +94,10 @@
 <section id="slider" class="slider">
     <ul>
         <li><img class="sliderimg" src="../img/focusImg/slide1.png" alt=""></li>
-        <li><img class="sliderimg" src="../img/focusImg/slide4.png" alt=""></li>
+        <li><a href="http://www.fbips.cn" target="_blank"><img class="sliderimg" src="../img/focusImg/slide4.png" alt=""></a></li>
         <li><img class="sliderimg" src="../img/focusImg/slide2.png" alt=""></li>
+        <li><a href="http://www.fbips.cn" target="_blank"><img class="sliderimg" src="../img/focusImg/slide5.png" alt=""></a></li>
         <li><img class="sliderimg" src="../img/focusImg/slide3.png" alt=""></li>
-        <li><img class="sliderimg" src="../img/focusImg/slide5.png" alt=""></li>
     </ul>
 </section>
 
@@ -170,9 +171,9 @@
                 <figure class="mask">
                     <label> 成功案例--- </label>
                     <section class="text">
-                        <label>高等教育</label>
+                        <label>传统制造</label>
                         <p>
-                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                            制造业基础能力提升是我国从工业大国迈向工业强国的战略基石，工业强基攸关工业自主创新能力建设以及核心竞争力提升等各个方面。
                         </p>
                         <p class="link"><a href="cases/index.html#floor1"></a></p>
                     </section>
@@ -185,9 +186,9 @@
                 <figure class="mask">
                     <label> 成功案例--- </label>
                     <section class="text">
-                        <label>高等教育</label>
+                        <label>高端设备</label>
                         <p>
-                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                            十二五”期间，航空装备、卫星及应用、轨道交通装备、海洋工程装备和智能制造等高端设备带来的高附加值进一步显现。大力培育和发展高端装备制造业，是提升我国产业核心竞争力的必然要求，对于加快转变经济发展方式、实现由制造业大国向强国转变具有重要战略意义。维正集团的客户，自然离不开高端装备类企业。
                         </p>
                         <p class="link"><a href="cases/index.html#floor2"></a></p>
                     </section>
@@ -200,9 +201,9 @@
                 <figure class="mask">
                     <label> 成功案例--- </label>
                     <section class="text">
-                        <label>高等教育</label>
+                        <label>建筑工程</label>
                         <p>
-                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                            “十二五”期间，随着建筑工程行业竞争的不断加剧，低碳经济，绿色化、人性化和安全性愈加受到重视，建筑工程生产企业愈来愈重视对行业市场的研究，特别加大对于知识产权的保护。正因为如此，一大批国内优秀的建筑工程品牌成为维正集团众多客户中的一员！
                         </p>
                         <p class="link"><a href="cases/index.html#floor3"></a></p>
                     </section>
@@ -215,9 +216,9 @@
                 <figure class="mask">
                     <label> 成功案例--- </label>
                     <section class="text">
-                        <label>高等教育</label>
+                        <label>交通运输</label>
                         <p>
-                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                            交通运输是经济发展的基本需要和先决条件，现代社会的生存基础和文明标志，对促进社会分工、大工业发展和规模经济的形成，巩固国家的政治统一和加强国防建设，扩大国际经贸合作和人员往来发挥重要作用。总之，交通运输具有重要的经济、社会、政治和国防意义。
                         </p>
                         <p class="link"><a href="cases/index.html#floor4"></a></p>
                     </section>
@@ -230,7 +231,7 @@
                 <figure class="mask">
                     <label> 成功案例--- </label>
                     <section class="text">
-                        <label>高等教育</label>
+                        <label>生物医药</label>
                         <p>
                             信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
                         </p>
@@ -247,9 +248,9 @@
                 <figure class="mask">
                     <label> 成功案例--- </label>
                     <section class="text">
-                        <label>高等教育</label>
+                        <label>光电通信</label>
                         <p>
-                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                            生物医药产业由生物技术产业与医药产业共同组成。中国生物医药产业园是伴随着高新区的发展而不断发展的。生物医药产业具有创新成本高、投资风险大、研发周期长等特点；产业技术新知识、新方法、新领域层出不穷，故此类企业对于知识产权保护力度也是高度关注。
                         </p>
                         <p class="link"><a href="cases/index.html#floor6"></a></p>
                     </section>
@@ -262,9 +263,9 @@
                 <figure class="mask">
                     <label> 成功案例--- </label>
                     <section class="text">
-                        <label>高等教育</label>
+                        <label>高等院校</label>
                         <p>
-                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                            光电通信业是目前发展最快、最具创新活力的领域之一。“十二五”期间，其发展规模不断扩张，总体保持良好发展势头，在支撑引领经济社会发展方面做出了卓越贡献。未来，随着互联网服务与应用在各行各业的迅速拓展，光电通信业将面临新的发展机遇和挑战，行业规模结构、发展模式和监管体系等都将发生一系列重大转变，在自身获得更大发展空间的同时，将为经济增长和社会进步提供新动能。
                         </p>
                         <p class="link"><a href="cases/index.html#floor7"></a></p>
                     </section>
@@ -277,9 +278,9 @@
                 <figure class="mask">
                     <label> 成功案例--- </label>
                     <section class="text">
-                        <label>高等教育</label>
+                        <label>服饰纺织</label>
                         <p>
-                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                            衣食住行，是亿万大众离不开的生活所需。中国古代的纺织与印染技术具有非常悠久的历史，但是2012年以来，我国纺织产品的国际竞争力明显下降。行业增长速度下滑甚至萎缩，业内企业迫切需要谋求转型，未来行业面临洗牌。提高环保理念、节能减排、提升品牌形象、开发多样化以及差异化产品等等是纺织业发展趋势。
                         </p>
                         <p class="link"><a href="cases/index.html#floor8"></a></p>
                     </section>
@@ -292,9 +293,9 @@
                 <figure class="mask">
                     <label> 成功案例--- </label>
                     <section class="text">
-                        <label>高等教育</label>
+                        <label>食品饮料</label>
                         <p>
-                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                            民以食为天，知识产权始终贯穿食品行业创新与发展的始终。食品企业在满足消费者食品需求的同时，怎样提高品牌影响、扩大市场占有率，与商标、专利、著作权在内的知识产权占有情况有着千丝万缕的关联。
                         </p>
                         <p class="link"><a href="cases/index.html#floor9"></a></p>
                     </section>
@@ -307,9 +308,9 @@
                 <figure class="mask">
                     <label> 成功案例--- </label>
                     <section class="text">
-                        <label>高等教育</label>
+                        <label>农林牧渔</label>
                         <p>
-                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                            农业属于第一产业，中国农业起源的时间上推至万年以前。广义的农业包括种植业、林业、畜牧业、渔业、副业五种产业形式，它提供支撑国民经济建设与发展的基础产品。21世纪是农业发展的重要阶段，随着分子生物学的发展，生物基因库的建成，遗传工程的崛起，克隆技术和生物固氮技术的广泛应用，农业的面貌将为之一新。
                         </p>
                         <p class="link"><a href="cases/index.html#floor10"></a></p>
                     </section>
@@ -576,7 +577,7 @@
         <figcaption>
             <h3>走进维正·专业、守信</h3>
         </figcaption>
-        <p>我们用心服务，站在客户的角度做好美一个细节</p>
+        <p>我们用心服务，站在客户的角度做好每一个细节</p>
     </figure>
     <a href="#" class="container box">
         <em class="arrow"><img src="../img/arr-link.gif"/> </em>
@@ -589,7 +590,7 @@
         <figcaption>
             <h3>合作企业·风雨同行</h3>
         </figcaption>
-        <p>我们用心服务，站在客户的角度做好美一个细节</p>
+        <p>我们用心服务，站在客户的角度做好每一个细节</p>
     </figure>
     <section class="logos-wrap container">
         <section id="logos" class="slider">
@@ -711,6 +712,7 @@
     </section>
     <p class="text-center copyright">Copyright &copy;2016 维正知识产权代理有限公司 版权所有 浙ICP备13035314号</p>
 </footer>
+
 
 <script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
 <script src="../js/plugins/unslider.min.js"></script>
