--- a/src/html/newsCenter/lawNews.html
+++ b/src/html/newsCenter/lawNews.html
@@ -139,11 +139,11 @@
 <!--Pagination-->
 <section id="paginationBar" class="container">
     <ul>
-        <li class="prev"><a href="###">prev</a></li>
+        <li class="prev"><a href="#">prev</a></li>
         <li class="current">1</li>
         <li><a href="#">2</a></li>
         <li><a href="#">3</a></li>
-        <li class="next"><a href="###">next</a></li>
+        <li class="next"><a href="#">next</a></li>
     </ul>
 </section>
 
