--- a/src/html/servicePro/projectApplication.html
+++ b/src/html/servicePro/projectApplication.html
@@ -98,7 +98,7 @@
 </section>
 
 <!--Content-->
-<article id="sv-content">
+<main id="sv-content">
     <header id="service-current" class="wrap text-center ">
         <figure class="title">
             <figcaption>
@@ -194,7 +194,7 @@
             </ol>
         </section>
     </section>
-</article>
+</main>
 
 <!--SideBar-->
 <aside id="sideBar">
