--- a/src/html/aboutUs/index.html
+++ b/src/html/aboutUs/index.html
@@ -124,8 +124,7 @@
         </figcaption>
     </figure>
     <p class="text">
-        北京维正专利代理有限公司
-        是维正集团下设的专业专利代理机构，是经国家知识产权局批准成立的专业知识产权服务机构。公司自成立以来，一直秉承着“提升全天下企业的核心竞争力”的发展理念，力求为广大企业提供全方位的知识产权战略服务，公司服务领域主要包括专利、商标、著作权、知识产权战略规划等等。
+        北京维正专利代理有限公司是维正集团下设的专业专利代理机构，是经国家知识产权局批准成立的专业知识产权服务机构。公司自成立以来，一直秉承着“提升全天下企业的核心竞争力”的发展理念，力求为广大企业提供全方位的知识产权战略服务，公司服务领域主要包括专利、商标、著作权、知识产权战略规划等等。
     </p>
     <p class="text">
         维正汇集各个领域的专业人才，公司已经形成庞大的专利代理人队伍，多数具有多年学术研究经验，在专利申请文件撰写、无效程序以及侵权诉讼等方面具有丰富的经验；专利工程师均为国家重点院校理工科专业出身，拥有过硬的理论基础和实践经验。众多优秀律师、商标代理人、项目工程师以及知识产权顾问，以保证全方位、多角度地为客户提供知识产权一站式服务。所涉足的客户行业领域囊括能源、通讯、基础设施、信息技术、互联网、公共建设、航空、教育、医药、零售、制造等；维正拥有广泛的客户群体，为诸多民营500强企业、上市公司以及国有企业、政府机构、国际组织提供完善的知识产权培育方案。
