--- a/src/html/joinUs/idea.html
+++ b/src/html/joinUs/idea.html
@@ -98,7 +98,7 @@
 </section>
 
 <!--Content-->
-<section class="container">
+<main class="container">
     <!--  Tab Menu  -->
     <section id="tabMenu" class="toTable">
         <!-- Nav tabs -->
@@ -143,7 +143,7 @@
         </p>
     
     </div>
-</section>
+</main>
 
 
 <!--SideBar-->
