--- a/src/html/joinUs/index.html
+++ b/src/html/joinUs/index.html
@@ -97,7 +97,7 @@
 </section>
 
 <!--Content-->
-<section class="container">
+<main class="container">
     <!--  Tab Menu  -->
     <section id="tabMenu" class="toTable">
         <!-- Nav tabs -->
@@ -133,7 +133,7 @@
             </table>
         </div>
     </div>
-</section>
+</main>
 
 <!--Pop-->
 <aside id="jobDetail" class="popUp">
@@ -158,9 +158,12 @@
 <!--SideBar-->
 <aside id="sideBar">
     <ul>
-        <li><em class="icon-qq"></em><span><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes">QQ咨询</a> </span></li>
+        <li><em class="icon-qq"></em><span><a target="_blank"
+                                              href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes">QQ咨询</a> </span>
+        </li>
         <li><em class="icon-tel"></em><span>400-6063708</span></li>
-        <li><em class="icon-wechat"></em><p class="qrImg"><img src="../../img/qrcode.png" alt=""></p></li>
+        <li><em class="icon-wechat"></em>
+            <p class="qrImg"><img src="../../img/qrcode.png" alt=""></p></li>
         <li><em class="icon-backtop"></em></li>
     </ul>
 </aside>
@@ -205,9 +208,11 @@
     <section class="btm-contact">
         <ul>
             <li><a href="../foolishBird/index.html" class="icon-fb">傻鸟知服</a></li>
-            <li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes" class="icon-qq">QQ咨询</a></li>
+            <li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes" class="icon-qq">QQ咨询</a>
+            </li>
             <li><a href="#" class="icon-tel">24小时热线</a><span class="tip">400-6063708</span></li>
-            <li><a href="#" class="icon-wechat">官方微信</a><span class="qrcode"><img src="../../img/qrcode.png"></span></li>
+            <li><a href="#" class="icon-wechat">官方微信</a><span class="qrcode"><img src="../../img/qrcode.png"></span>
+            </li>
         </ul>
     </section>
     <p class="text-center copyright">Copyright &copy;2016 维正知识产权代理有限公司 版权所有 浙ICP备13035314号</p>
