--- a/src/html/newsCenter/tclAppraisal.html
+++ b/src/html/newsCenter/tclAppraisal.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>资讯中心-行业动态</title>
+    <title>资讯中心-技术成果鉴定</title>
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
@@ -26,14 +26,14 @@
             <ins>维正集团</ins>
         </a>
     </h1>
-    
+
     <nav id="navBar" class="navBar">
         <ul class="nav clearfix">
             <li>
-                <h3><a href="../index.html">网站首页</a></h3>
+                <h3><a  href="../index.html">网站首页</a></h3>
             </li>
             <li>
-                <h3><a href="../servicePro/index.html">服务项目</a></h3>
+                <h3><a  href="../servicePro/index.html">服务项目</a></h3>
                 <ul class="sub">
                     <li><a href="../servicePro/index.html"> 专利咨询</a></li>
                     <li><a href="../servicePro/brandRegist.html"> 商标注册</a></li>
@@ -42,34 +42,34 @@
                 </ul>
             </li>
             <li class="double">
-                <h3><a href="../cases/index.html">成功案例</a></h3>
+                <h3><a  href="../cases/index.html">成功案例</a></h3>
                 <ul class="sub">
-                    <li><a href="../cases/index.html#floor1">传统制造</a></li>
-                    <li><a href="../cases/index.html#floor2">高端设备</a></li>
-                    <li><a href="../cases/index.html#floor3">建筑工程</a></li>
-                    <li><a href="../cases/index.html#floor4">交通运输</a></li>
-                    <li><a href="../cases/index.html#floor5">生物医药</a></li>
-                    <li><a href="../cases/index.html#floor6">光电通信</a></li>
-                    <li><a href="../cases/index.html#floor7">高等院校</a></li>
-                    <li><a href="../cases/index.html#floor8">服饰纺织</a></li>
-                    <li><a href="../cases/index.html#floor9">食品饮料</a></li>
-                    <li><a href="../cases/index.html#floor10">农林牧渔</a></li>
+                    <li><a href="../cases/index.html#floor1">高等教育</a></li>
+                    <li><a href="../cases/index.html#floor2">移动通信</a></li>
+                    <li><a href="../cases/index.html#floor3">加工制造</a></li>
+                    <li><a href="../cases/index.html#floor4">现代制药</a></li>
+                    <li><a href="../cases/index.html#floor5">贸易进出口</a></li>
+                    <li><a href="../cases/index.html#floor6">化学工艺</a></li>
+                    <li><a href="../cases/index.html#floor7">互联网科技</a></li>
+                    <li><a href="../cases/index.html#floor8">食品加工</a></li>
+                    <li><a href="../cases/index.html#floor9">工程建设</a></li>
+                    <li><a href="../cases/index.html#floor10">电子商务</a></li>
                 </ul>
             </li>
             <li>
-                <h3><a href="../foolishBird/index.html">傻鸟知服</a></h3>
+                <h3><a  href="../foolishBird/index.html">傻鸟知服</a></h3>
             </li>
             <li>
-                <h3 class="active"><a href="../newsCenter/index.html">资讯中心</a></h3>
+                <h3 class="active"><a  href="../newsCenter/index.html">资讯中心</a></h3>
                 <ul class="sub">
                     <li><a href="../newsCenter/index.html">企业动态</a></li>
                     <li><a href="../newsCenter/mediaNews.html">媒体关注</a></li>
                     <li><a href="../newsCenter/industryNews.html">行业动态</a></li>
-                    <li><a href="lawNews.html">法律法规</a></li>
+                    <li><a href="../newsCenter/tclAppraisal.html">技术成果鉴定</a></li>
                 </ul>
             </li>
             <li>
-                <h3><a href="../aboutUs/index.html">关于我们</a></h3>
+                <h3><a  href="../aboutUs/index.html">关于我们</a></h3>
                 <ul class="sub">
                     <li><a href="../aboutUs/index.html">走进维正</a></li>
                     <li><a href="../aboutUs/wzCulture.html">维正文化</a></li>
@@ -78,14 +78,14 @@
                 </ul>
             </li>
             <li>
-                <h3><a href="../joinUs/index.html">诚聘英才</a></h3>
+                <h3><a  href="../joinUs/index.html">诚聘英才</a></h3>
                 <ul class="sub">
                     <li><a href="../joinUs/index.html">招聘职位</a></li>
                     <li><a href="../joinUs/idea.html">用人理念</a></li>
                 </ul>
             </li>
             <li>
-                <h3><a href="../contactUs/index.html">联系我们</a></h3>
+                <h3><a  href="../contactUs/index.html">联系我们</a></h3>
             </li>
         </ul>
     </nav>
@@ -102,8 +102,8 @@
             <ul>
                 <li><a href="../newsCenter/index.html">公司动态</a></li>
                 <li><a href="../newsCenter/mediaNews.html">媒体动态</a></li>
-                <li class="active"><a href="../newsCenter/industryNews.html">行业动态</a></li>
-                <li><a href="lawNews.html">法律时讯</a></li>
+                <li><a href="../newsCenter/industryNews.html">行业动态</a></li>
+                <li class="active"><a href="../newsCenter/tclAppraisal.html">法律时讯</a></li>
             </ul>
         </menu>
     </section>
@@ -139,23 +139,20 @@
 <!--Pagination-->
 <section id="paginationBar" class="container">
     <ul>
-        <li class="prev"><a href="#">prev</a></li>
+        <li class="prev"><a href="###">prev</a></li>
         <li class="current">1</li>
         <li><a href="#">2</a></li>
         <li><a href="#">3</a></li>
-        <li class="next"><a href="#">next</a></li>
+        <li class="next"><a href="###">next</a></li>
     </ul>
 </section>
 
 <!--SideBar-->
 <aside id="sideBar">
     <ul>
-        <li><em class="icon-qq"></em><span><a target="_blank"
-                                              href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes">QQ咨询</a> </span>
-        </li>
+        <li><em class="icon-qq"></em><span><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes">QQ咨询</a> </span></li>
         <li><em class="icon-tel"></em><span>400-6063708</span></li>
-        <li><em class="icon-wechat"></em>
-            <p class="qrImg"><img src="../../img/qrcode.png" alt=""></p></li>
+        <li><em class="icon-wechat"></em><p class="qrImg"><img src="../../img/qrcode.png" alt=""></p></li>
         <li><em class="icon-backtop"></em></li>
     </ul>
 </aside>
@@ -164,47 +161,44 @@
 <footer id="main-footer">
     <section class="btm-nav clearfix">
         <dl>
-            <dt>服务项目</dt>
-            <dd><a href="../servicePro/index.html">专利咨询</a></dd>
-            <dd><a href="../servicePro/projectApplication.html">项目申请</a></dd>
-            <dd><a href="../servicePro/brandRegist.html">商标注册</a></dd>
-            <dd><a href="../servicePro/copyright.html">项目申报</a></dd>
+            <dt>走进维正</dt>
+            <dd><a href="#">维正简介</a></dd>
+            <dd><a href="#">管理团队</a></dd>
+            <dd><a href="#">组织机构</a></dd>
+            <dd><a href="#">资质荣耀</a></dd>
         </dl>
         <dl>
             <dt>成功案例</dt>
-            <dd><a href="../cases/index.html#floor1">传统制造</a></dd>
-            <dd><a href="../cases/index.html#floor7">高等教育</a></dd>
-            <dd><a href="../cases/index.html#floor3">建筑工程</a></dd>
-            <dd><a href="../cases/index.html">更多+</a></dd>
+            <dd><a href="#">品牌解读</a></dd>
+            <dd><a href="#">价值观</a></dd>
+            <dd><a href="#">案例分析</a></dd>
+        </dl>
+        <dl>
+            <dt>服务项目</dt>
+            <dd><a href="#">专利咨询</a></dd>
+            <dd><a href="#">项目申请</a></dd>
+            <dd><a href="#">商标注册</a></dd>
+            <dd><a href="#">更多+</a></dd>
         </dl>
         <dl>
             <dt>资讯中心</dt>
-            <dd><a href="../newsCenter/index.html">企业动态</a></dd>
-            <dd><a href="../newsCenter/mediaNews.html">媒体关注</a></dd>
-            <dd><a href="../newsCenter/industryNews.html">行业动态</a></dd>
-            <dd><a href="../newsCenter/lawNews.html">法律法规</a></dd>
-        </dl>
-        <dl>
-            <dt>关于我们</dt>
-            <dd><a href="../aboutUs/index.html">走进维正</a></dd>
-            <dd><a href="../aboutUs/wzCulture.html">维正文化</a></dd>
-            <dd><a href="../aboutUs/wzDevelopment.html">发展历程</a></dd>
-            <dd><a href="../aboutUs/wzTeam.html">维正团队</a></dd>
+            <dd><a href="#">公司动态</a></dd>
+            <dd><a href="#">媒体动态</a></dd>
+            <dd><a href="#">行业动态</a></dd>
+            <dd><a href="#">法律行规</a></dd>
         </dl>
         <dl>
             <dt>诚聘英才</dt>
-            <dd><a href="../joinUs/index.html">招聘职位</a></dd>
-            <dd><a href="../joinUs/idea.html">用人理念</a></dd>
+            <dd><a href="#">招聘职位</a></dd>
+            <dd><a href="#">人才理念</a></dd>
         </dl>
     </section>
     <section class="btm-contact">
         <ul>
-            <li><a href="../foolishBird/index.html" class="icon-fb">傻鸟知服</a></li>
-            <li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes" class="icon-qq">QQ咨询</a>
-            </li>
-            <li><a href="#" class="icon-tel">24小时热线</a><span class="tip">400-6063708</span></li>
-            <li><a href="#" class="icon-wechat">官方微信</a><span class="qrcode"><img src="../../img/qrcode.png"></span>
-            </li>
+            <li><a href="#" class="icon-fb">傻鸟知服</a></li>
+            <li><a href="#" class="icon-qq">QQ咨询</a></li>
+            <li><a href="#" class="icon-tel">24小时热线</a></li>
+            <li><a href="#" class="icon-wechat">官方微信</a></li>
         </ul>
     </section>
     <p class="text-center copyright">Copyright &copy;2016 维正知识产权代理有限公司 版权所有 浙ICP备13035314号</p>
