UI更改局部banner图

--- a/src/html/newsCenter/newsDetail.html
+++ b/src/html/newsCenter/newsDetail.html
@@ -120,7 +120,7 @@
         </ul>
     </section>
     <figure class="imgBox">
-        <img src="../../img/project/view-01.png" alt="" width="300px">
+        <img src="../../img/project/view-01.png" alt="">
         <p>【宁波分公司开幕式】</p>
     </figure>
     <p>
@@ -131,7 +131,7 @@
     </p>
     
     <figure class="imgBox">
-        <img src="../../img/project/view-02.png" alt="" width="300px">
+        <img src="../../img/project/view-02.png" alt="">
         <p>【宁波分公司开幕式】</p>
     </figure>
     <p>
