--- a/src/html/servicePro/projectApplication.html
+++ b/src/html/servicePro/projectApplication.html
@@ -93,7 +93,7 @@
 <!--Banner-->
 <section id="sv-banner">
     <a href="#">
-        <img src="../../img/focusImg/banner-1.jpg" class="response-img" alt="">
+        <img src="../../img/focusImg/banner-1.png" class="response-img" alt="">
     </a>
 </section>
 
