--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,8 +7,12 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
+    <meta name="keywords" content="北京维正专利代理公司,温州维正知识产权,台州维正知识产权,杭州维正知识产权,宁波维正知识产权维正,苏州维正知识产权,维正知识产权集团,维正知识产权代理有限公司,专利咨询,国外专利咨询,项目申请,商标注册,版权登记,著驰名商标认证,高新技术企业认证 ">
+    <meta name="description" content="维正知识产权集团是经工商局批准设立的知识产权代理服务机构，本公司具有规范科学的管理体系，工作人员具有丰富的职业经验和优秀的法律素养，可以在产品专利申请相关的行政和法律服务方面为客户提供优质，高效的服务，服务项目：专利咨询、国外专利咨询、项目申请、商标注册、版权登记、著驰名商标认证、高新技术企业认证等。">
     <meta name="apple-mobile-web-app-capable" content="no"/>
     <meta name="format-detection" content="telephone=no">
+    <meta name="renderer" content="webkit">
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="../css/style.css"/>
     <!--[if lt IE 9]>
     <script src="http://cdn.bootcss.com/html5shiv/r29/html5.min.js"></script>
@@ -93,13 +97,11 @@
 <!--SLIDE-->
 <section id="slider" class="slider">
     <ul>
-        <li><img class="sliderimg" src="../img/focusImg/slide1.png" alt=""></li>
-        <li><a href="http://www.fbips.cn" target="_blank"><img class="sliderimg" src="../img/focusImg/slide4.png"
-                                                               alt=""></a></li>
-        <li><img class="sliderimg" src="../img/focusImg/slide2.png" alt=""></li>
-        <li><a href="http://www.fbips.cn" target="_blank"><img class="sliderimg" src="../img/focusImg/slide5.png"
-                                                               alt=""></a></li>
         <li><img class="sliderimg" src="../img/focusImg/slide3.png" alt=""></li>
+        <li><a href="http://www.fbips.cn" target="_blank"><img class="sliderimg" src="../img/focusImg/slide4.png" alt=""></a></li>
+        <li><img class="sliderimg" src="../img/focusImg/slide2.png" alt=""></li>
+        <li><a href="http://www.fbips.cn" target="_blank"><img class="sliderimg" src="../img/focusImg/slide5.png" alt=""></a></li>
+        <li><img class="sliderimg" src="../img/focusImg/slide1.png" alt=""></li>
     </ul>
 </section>
 
@@ -581,7 +583,7 @@
         </figcaption>
         <p>我们用心服务，站在客户的角度做好每一个细节</p>
     </figure>
-    <a href="#" class="container box">
+    <a href="aboutUs/index.html" class="container box">
         <em class="arrow"><img src="../img/arr-link.gif"/> </em>
     </a>
 </section>
@@ -656,9 +658,12 @@
 <!--SideBar-->
 <aside id="sideBar">
     <ul>
-        <li><em class="icon-qq"></em><span class="icon-qq"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes">QQ咨询</a> </span> </li>
+        <li><em class="icon-qq"></em><span class="icon-qq"><a target="_blank"
+                                                              href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes">QQ咨询</a> </span>
+        </li>
         <li><em class="icon-tel"></em><span class="icon-tel">400-6063708</span></li>
-        <li><em class="icon-wechat"></em> <p class="qrImg"><img src="../img/qrcode.png" alt=""></p></li>
+        <li><em class="icon-wechat"></em>
+            <p class="qrImg"><img src="../img/qrcode.png" alt=""></p></li>
         <li><em class="icon-backtop"></em></li>
     </ul>
 </aside>
