--- a/src/html/newsCenter/index.html
+++ b/src/html/newsCenter/index.html
@@ -108,7 +108,7 @@
                 <li class="active"><a href="../newsCenter/index.html">公司动态</a></li>
                 <li><a href="../newsCenter/mediaNews.html">媒体动态</a></li>
                 <li><a href="../newsCenter/industryNews.html">行业动态</a></li>
-                <li><a href="lawNews.html">法律时讯</a></li>
+                <li><a href="lawNews.html">法律法规</a></li>
             </ul>
         </menu>
     </section>
