微调图片文案
1.首页板块位移
2.“联系我们”页面图片替换

--- a/src/html/contactUs/index.html
+++ b/src/html/contactUs/index.html
@@ -134,7 +134,7 @@
                 <header class="content-side">
                     <span class="prev"></span>
                     <span class="next"></span>
-                    <img src="../../img/city/city-beijing.png"/>
+                    <img src="../../img/city/city-beijing.jpg"/>
                 </header>
                 <p>北京维正专利代理有限公司</p>
                 <ul>
@@ -155,7 +155,7 @@
                 <header class="content-side">
                     <span class="prev"></span>
                     <span class="next"></span>
-                    <img src="../../img/city/city-tianjin.png"/>
+                    <img src="../../img/city/city-tianjin.jpg"/>
                 </header>
                 <p>天津维正知识产权代理有限公司</p>
                 <ul>
@@ -169,7 +169,7 @@
                 <header class="content-side">
                     <span class="prev"></span>
                     <span class="next"></span>
-                    <img src="../../img/city/city-nanjing.png"/>
+                    <img src="../../img/city/city-nanjing.jpg"/>
                 </header>
                 <p>南京维志知识产权代理有限公司</p>
                 <ul>
@@ -183,7 +183,7 @@
                 <header class="content-side">
                     <span class="prev"></span>
                     <span class="next"></span>
-                    <img src="../../img/city/city-suzhou.png"/>
+                    <img src="../../img/city/city-suzhou.jpg"/>
                 </header>
                 <p>苏州维正知识产权代理有限公司</p>
                 <ul>
@@ -197,7 +197,7 @@
                 <header class="content-side">
                     <span class="prev"></span>
                     <span class="next"></span>
-                    <img src="../../img/city/city-wuxi.png"/>
+                    <img src="../../img/city/city-wuxi.jpg"/>
                 </header>
                 <p>无锡维正知识产权代理有限公司</p>
                 <ul>
@@ -211,7 +211,7 @@
                 <header class="content-side">
                     <span class="prev"></span>
                     <span class="next"></span>
-                    <img src="../../img/city/city-shanghai.png"/>
+                    <img src="../../img/city/city-shanghai.jpg"/>
                 </header>
                 <p>上海维助知识产权代理有限公司</p>
                 <ul>
@@ -225,7 +225,7 @@
                 <header class="content-side">
                     <span class="prev"></span>
                     <span class="next"></span>
-                    <img src="../../img/city/city-wenzhou.png"/>
+                    <img src="../../img/city/city-wenzhou.jpg"/>
                 </header>
                 <p>温州维正知识产权代理有限公司</p>
                 <ul>
@@ -239,7 +239,7 @@
                 <header class="content-side">
                     <span class="prev"></span>
                     <span class="next"></span>
-                    <img src="../../img/city/city-taizhou.png"/>
+                    <img src="../../img/city/city-taizhou.jpg"/>
                 </header>
                 <p>台州维正知识产权代理有限公司</p>
                 <ul>
@@ -253,7 +253,7 @@
                 <header class="content-side">
                     <span class="prev"></span>
                     <span class="next"></span>
-                    <img src="../../img/city/city-ningbo.png"/>
+                    <img src="../../img/city/city-ningbo.jpg"/>
                 </header>
                 <p>宁波维正知识产权代理有限公司</p>
                 <ul>
@@ -267,7 +267,7 @@
                 <header class="content-side">
                     <span class="prev"></span>
                     <span class="next"></span>
-                    <img src="../../img/city/city-hangzhou.png"/>
+                    <img src="../../img/city/city-hangzhou.jpg"/>
                 </header>
                 <p>杭州维正知识产权代理有限公司</p>
                 <ul>
@@ -281,7 +281,7 @@
                 <header class="content-side">
                     <span class="prev"></span>
                     <span class="next"></span>
-                    <img src="../../img/city/city-shaoxing.png"/>
+                    <img src="../../img/city/city-shaoxing.jpg"/>
                 </header>
                 <p>绍兴维正知识产权代理有限公司</p>
                 <ul>
@@ -295,7 +295,7 @@
                 <header class="content-side">
                     <span class="prev"></span>
                     <span class="next"></span>
-                    <img src="../../img/city/city-jiaxing.png"/>
+                    <img src="../../img/city/city-jiaxing.jpg"/>
                 </header>
                 <p>嘉兴维正知识产权代理有限公司</p>
                 <ul>
@@ -309,7 +309,7 @@
                 <header class="content-side">
                     <span class="prev"></span>
                     <span class="next"></span>
-                    <img src="../../img/city/city-shenzhen.png"/>
+                    <img src="../../img/city/city-shenzhen.jpg"/>
                 </header>
                 <p>深圳维正知识产权代理有限公司</p>
                 <ul>
