--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
-    <meta name="keywords" content="北京维正专利代理公司,温州维正知识产权,台州维正知识产权,杭州维正知识产权,宁波维正知识产权维正,苏州维正知识产权,维正知识产权集团,维正知识产权代理有限公司,专利咨询,国外专利咨询,项目申请,商标注册,版权登记,著驰名商标认证,高新技术企业认证 ">
-    <meta name="description" content="维正知识产权集团是经工商局批准设立的知识产权代理服务机构，本公司具有规范科学的管理体系，工作人员具有丰富的职业经验和优秀的法律素养，可以在产品专利申请相关的行政和法律服务方面为客户提供优质，高效的服务，服务项目：专利咨询、国外专利咨询、项目申请、商标注册、版权登记、著驰名商标认证、高新技术企业认证等。">
+    <meta name="keywords"
+          content="北京维正专利代理公司,温州维正知识产权,台州维正知识产权,杭州维正知识产权,宁波维正知识产权维正,苏州维正知识产权,维正知识产权集团,维正知识产权代理有限公司,专利咨询,国外专利咨询,项目申请,商标注册,版权登记,著驰名商标认证,高新技术企业认证 ">
+    <meta name="description"
+          content="维正知识产权集团是经工商局批准设立的知识产权代理服务机构，本公司具有规范科学的管理体系，工作人员具有丰富的职业经验和优秀的法律素养，可以在产品专利申请相关的行政和法律服务方面为客户提供优质，高效的服务，服务项目：专利咨询、国外专利咨询、项目申请、商标注册、版权登记、著驰名商标认证、高新技术企业认证等。">
     <meta name="apple-mobile-web-app-capable" content="no"/>
     <meta name="format-detection" content="telephone=no">
     <meta name="renderer" content="webkit">
@@ -98,9 +100,11 @@
 <section id="slider" class="slider">
     <ul>
         <li><img class="sliderimg" src="../img/focusImg/slide3.png" alt=""></li>
-        <li><a href="http://www.fbips.cn" target="_blank"><img class="sliderimg" src="../img/focusImg/slide4.png" alt=""></a></li>
+        <li><a href="http://www.fbips.cn" target="_blank"><img class="sliderimg" src="../img/focusImg/slide4.png"
+                                                               alt=""></a></li>
         <li><img class="sliderimg" src="../img/focusImg/slide2.png" alt=""></li>
-        <li><a href="http://www.fbips.cn" target="_blank"><img class="sliderimg" src="../img/focusImg/slide5.png" alt=""></a></li>
+        <li><a href="http://www.fbips.cn" target="_blank"><img class="sliderimg" src="../img/focusImg/slide5.png"
+                                                               alt=""></a></li>
         <li><img class="sliderimg" src="../img/focusImg/slide1.png" alt=""></li>
     </ul>
 </section>
@@ -156,173 +160,6 @@
         </section>
     </section>
     <span class="more"><a href="servicePro/index.html">more</a></span>
-</section>
-
-<!--PROJCET-->
-<section id="project" class="wrap text-center">
-    <figure class="title">
-        <figcaption>
-            <h3>成功案例·成就商业品牌</h3>
-        </figcaption>
-        <p>您的眼光高度，决定您的品牌厚度</p>
-    </figure>
-    <section class="project-list text-left">
-        <ul>
-            <li>
-                <section class="show-img">
-                    <img src="../img/project/small/view-01s.png" class="response-img"/>
-                </section>
-                <figure class="mask">
-                    <label> 成功案例--- </label>
-                    <section class="text">
-                        <label>传统制造</label>
-                        <p>
-                            制造业基础能力提升是我国从工业大国迈向工业强国的战略基石，工业强基攸关工业自主创新能力建设以及核心竞争力提升等各个方面。
-                        </p>
-                        <p class="link"><a href="cases/index.html#floor1"></a></p>
-                    </section>
-                </figure>
-            </li>
-            <li>
-                <section class="show-img">
-                    <img src="../img/project/small/view-02s.png" class="response-img"/>
-                </section>
-                <figure class="mask">
-                    <label> 成功案例--- </label>
-                    <section class="text">
-                        <label>高端设备</label>
-                        <p>
-                            十二五”期间，航空装备、卫星及应用、轨道交通装备、海洋工程装备和智能制造等高端设备带来的高附加值进一步显现。大力培育和发展高端装备制造业，是提升我国产业核心竞争力的必然要求，对于加快转变经济发展方式、实现由制造业大国向强国转变具有重要战略意义。维正集团的客户，自然离不开高端装备类企业。
-                        </p>
-                        <p class="link"><a href="cases/index.html#floor2"></a></p>
-                    </section>
-                </figure>
-            </li>
-            <li>
-                <section class="show-img">
-                    <img src="../img/project/small/view-03s.png" class="response-img"/>
-                </section>
-                <figure class="mask">
-                    <label> 成功案例--- </label>
-                    <section class="text">
-                        <label>建筑工程</label>
-                        <p>
-                            “十二五”期间，随着建筑工程行业竞争的不断加剧，低碳经济，绿色化、人性化和安全性愈加受到重视，建筑工程生产企业愈来愈重视对行业市场的研究，特别加大对于知识产权的保护。正因为如此，一大批国内优秀的建筑工程品牌成为维正集团众多客户中的一员！
-                        </p>
-                        <p class="link"><a href="cases/index.html#floor3"></a></p>
-                    </section>
-                </figure>
-            </li>
-            <li>
-                <section class="show-img">
-                    <img src="../img/project/small/view-04s.png" class="response-img"/>
-                </section>
-                <figure class="mask">
-                    <label> 成功案例--- </label>
-                    <section class="text">
-                        <label>交通运输</label>
-                        <p>
-                            交通运输是经济发展的基本需要和先决条件，现代社会的生存基础和文明标志，对促进社会分工、大工业发展和规模经济的形成，巩固国家的政治统一和加强国防建设，扩大国际经贸合作和人员往来发挥重要作用。总之，交通运输具有重要的经济、社会、政治和国防意义。
-                        </p>
-                        <p class="link"><a href="cases/index.html#floor4"></a></p>
-                    </section>
-                </figure>
-            </li>
-            <li>
-                <section class="show-img">
-                    <img src="../img/project/small/view-05s.png" class="response-img"/>
-                </section>
-                <figure class="mask">
-                    <label> 成功案例--- </label>
-                    <section class="text">
-                        <label>生物医药</label>
-                        <p>
-                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
-                        </p>
-                        <p class="link"><a href="cases/index.html#floor5"></a></p>
-                    </section>
-                </figure>
-            </li>
-        </ul>
-        <ul>
-            <li>
-                <section class="show-img">
-                    <img src="../img/project/small/view-06s.png" class="response-img"/>
-                </section>
-                <figure class="mask">
-                    <label> 成功案例--- </label>
-                    <section class="text">
-                        <label>光电通信</label>
-                        <p>
-                            生物医药产业由生物技术产业与医药产业共同组成。中国生物医药产业园是伴随着高新区的发展而不断发展的。生物医药产业具有创新成本高、投资风险大、研发周期长等特点；产业技术新知识、新方法、新领域层出不穷，故此类企业对于知识产权保护力度也是高度关注。
-                        </p>
-                        <p class="link"><a href="cases/index.html#floor6"></a></p>
-                    </section>
-                </figure>
-            </li>
-            <li>
-                <section class="show-img">
-                    <img src="../img/project/small/view-07s.png" class="response-img"/>
-                </section>
-                <figure class="mask">
-                    <label> 成功案例--- </label>
-                    <section class="text">
-                        <label>高等院校</label>
-                        <p>
-                            光电通信业是目前发展最快、最具创新活力的领域之一。“十二五”期间，其发展规模不断扩张，总体保持良好发展势头，在支撑引领经济社会发展方面做出了卓越贡献。未来，随着互联网服务与应用在各行各业的迅速拓展，光电通信业将面临新的发展机遇和挑战，行业规模结构、发展模式和监管体系等都将发生一系列重大转变，在自身获得更大发展空间的同时，将为经济增长和社会进步提供新动能。
-                        </p>
-                        <p class="link"><a href="cases/index.html#floor7"></a></p>
-                    </section>
-                </figure>
-            </li>
-            <li>
-                <section class="show-img">
-                    <img src="../img/project/small/view-08s.png" class="response-img"/>
-                </section>
-                <figure class="mask">
-                    <label> 成功案例--- </label>
-                    <section class="text">
-                        <label>服饰纺织</label>
-                        <p>
-                            衣食住行，是亿万大众离不开的生活所需。中国古代的纺织与印染技术具有非常悠久的历史，但是2012年以来，我国纺织产品的国际竞争力明显下降。行业增长速度下滑甚至萎缩，业内企业迫切需要谋求转型，未来行业面临洗牌。提高环保理念、节能减排、提升品牌形象、开发多样化以及差异化产品等等是纺织业发展趋势。
-                        </p>
-                        <p class="link"><a href="cases/index.html#floor8"></a></p>
-                    </section>
-                </figure>
-            </li>
-            <li>
-                <section class="show-img">
-                    <img src="../img/project/small/view-09s.png" class="response-img"/>
-                </section>
-                <figure class="mask">
-                    <label> 成功案例--- </label>
-                    <section class="text">
-                        <label>食品饮料</label>
-                        <p>
-                            民以食为天，知识产权始终贯穿食品行业创新与发展的始终。食品企业在满足消费者食品需求的同时，怎样提高品牌影响、扩大市场占有率，与商标、专利、著作权在内的知识产权占有情况有着千丝万缕的关联。
-                        </p>
-                        <p class="link"><a href="cases/index.html#floor9"></a></p>
-                    </section>
-                </figure>
-            </li>
-            <li>
-                <section class="show-img">
-                    <img src="../img/project/small/view-10s.png" class="response-img"/>
-                </section>
-                <figure class="mask">
-                    <label> 成功案例--- </label>
-                    <section class="text">
-                        <label>农林牧渔</label>
-                        <p>
-                            农业属于第一产业，中国农业起源的时间上推至万年以前。广义的农业包括种植业、林业、畜牧业、渔业、副业五种产业形式，它提供支撑国民经济建设与发展的基础产品。21世纪是农业发展的重要阶段，随着分子生物学的发展，生物基因库的建成，遗传工程的崛起，克隆技术和生物固氮技术的广泛应用，农业的面貌将为之一新。
-                        </p>
-                        <p class="link"><a href="cases/index.html#floor10"></a></p>
-                    </section>
-                </figure>
-            </li>
-        </ul>
-    </section>
-    <span class="more"><a href="cases/index.html">more</a></span>
 </section>
 
 <!--NEWS-->
@@ -573,6 +410,173 @@
         </section>
     </section>
     <span class="more"><a href="newsCenter/index.html">more</a></span>
+</section>
+
+<!--PROJCET-->
+<section id="project" class="wrap text-center">
+    <figure class="title">
+        <figcaption>
+            <h3>成功案例·成就商业品牌</h3>
+        </figcaption>
+        <p>您的眼光高度，决定您的品牌厚度</p>
+    </figure>
+    <section class="project-list text-left">
+        <ul>
+            <li>
+                <section class="show-img">
+                    <img src="../img/project/small/view-01s.png" class="response-img"/>
+                </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>传统制造</label>
+                        <p>
+                            制造业基础能力提升是我国从工业大国迈向工业强国的战略基石，工业强基攸关工业自主创新能力建设以及核心竞争力提升等各个方面。
+                        </p>
+                        <p class="link"><a href="cases/index.html#floor1"></a></p>
+                    </section>
+                </figure>
+            </li>
+            <li>
+                <section class="show-img">
+                    <img src="../img/project/small/view-02s.png" class="response-img"/>
+                </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>高端设备</label>
+                        <p>
+                            十二五”期间，航空装备、卫星及应用、轨道交通装备、海洋工程装备和智能制造等高端设备带来的高附加值进一步显现。大力培育和发展高端装备制造业，是提升我国产业核心竞争力的必然要求，对于加快转变经济发展方式、实现由制造业大国向强国转变具有重要战略意义。维正集团的客户，自然离不开高端装备类企业。
+                        </p>
+                        <p class="link"><a href="cases/index.html#floor2"></a></p>
+                    </section>
+                </figure>
+            </li>
+            <li>
+                <section class="show-img">
+                    <img src="../img/project/small/view-03s.png" class="response-img"/>
+                </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>建筑工程</label>
+                        <p>
+                            “十二五”期间，随着建筑工程行业竞争的不断加剧，低碳经济，绿色化、人性化和安全性愈加受到重视，建筑工程生产企业愈来愈重视对行业市场的研究，特别加大对于知识产权的保护。正因为如此，一大批国内优秀的建筑工程品牌成为维正集团众多客户中的一员！
+                        </p>
+                        <p class="link"><a href="cases/index.html#floor3"></a></p>
+                    </section>
+                </figure>
+            </li>
+            <li>
+                <section class="show-img">
+                    <img src="../img/project/small/view-04s.png" class="response-img"/>
+                </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>交通运输</label>
+                        <p>
+                            交通运输是经济发展的基本需要和先决条件，现代社会的生存基础和文明标志，对促进社会分工、大工业发展和规模经济的形成，巩固国家的政治统一和加强国防建设，扩大国际经贸合作和人员往来发挥重要作用。总之，交通运输具有重要的经济、社会、政治和国防意义。
+                        </p>
+                        <p class="link"><a href="cases/index.html#floor4"></a></p>
+                    </section>
+                </figure>
+            </li>
+            <li>
+                <section class="show-img">
+                    <img src="../img/project/small/view-05s.png" class="response-img"/>
+                </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>生物医药</label>
+                        <p>
+                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                        </p>
+                        <p class="link"><a href="cases/index.html#floor5"></a></p>
+                    </section>
+                </figure>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <section class="show-img">
+                    <img src="../img/project/small/view-06s.png" class="response-img"/>
+                </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>光电通信</label>
+                        <p>
+                            生物医药产业由生物技术产业与医药产业共同组成。中国生物医药产业园是伴随着高新区的发展而不断发展的。生物医药产业具有创新成本高、投资风险大、研发周期长等特点；产业技术新知识、新方法、新领域层出不穷，故此类企业对于知识产权保护力度也是高度关注。
+                        </p>
+                        <p class="link"><a href="cases/index.html#floor6"></a></p>
+                    </section>
+                </figure>
+            </li>
+            <li>
+                <section class="show-img">
+                    <img src="../img/project/small/view-07s.png" class="response-img"/>
+                </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>高等院校</label>
+                        <p>
+                            光电通信业是目前发展最快、最具创新活力的领域之一。“十二五”期间，其发展规模不断扩张，总体保持良好发展势头，在支撑引领经济社会发展方面做出了卓越贡献。未来，随着互联网服务与应用在各行各业的迅速拓展，光电通信业将面临新的发展机遇和挑战，行业规模结构、发展模式和监管体系等都将发生一系列重大转变，在自身获得更大发展空间的同时，将为经济增长和社会进步提供新动能。
+                        </p>
+                        <p class="link"><a href="cases/index.html#floor7"></a></p>
+                    </section>
+                </figure>
+            </li>
+            <li>
+                <section class="show-img">
+                    <img src="../img/project/small/view-08s.png" class="response-img"/>
+                </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>服饰纺织</label>
+                        <p>
+                            衣食住行，是亿万大众离不开的生活所需。中国古代的纺织与印染技术具有非常悠久的历史，但是2012年以来，我国纺织产品的国际竞争力明显下降。行业增长速度下滑甚至萎缩，业内企业迫切需要谋求转型，未来行业面临洗牌。提高环保理念、节能减排、提升品牌形象、开发多样化以及差异化产品等等是纺织业发展趋势。
+                        </p>
+                        <p class="link"><a href="cases/index.html#floor8"></a></p>
+                    </section>
+                </figure>
+            </li>
+            <li>
+                <section class="show-img">
+                    <img src="../img/project/small/view-09s.png" class="response-img"/>
+                </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>食品饮料</label>
+                        <p>
+                            民以食为天，知识产权始终贯穿食品行业创新与发展的始终。食品企业在满足消费者食品需求的同时，怎样提高品牌影响、扩大市场占有率，与商标、专利、著作权在内的知识产权占有情况有着千丝万缕的关联。
+                        </p>
+                        <p class="link"><a href="cases/index.html#floor9"></a></p>
+                    </section>
+                </figure>
+            </li>
+            <li>
+                <section class="show-img">
+                    <img src="../img/project/small/view-10s.png" class="response-img"/>
+                </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>农林牧渔</label>
+                        <p>
+                            农业属于第一产业，中国农业起源的时间上推至万年以前。广义的农业包括种植业、林业、畜牧业、渔业、副业五种产业形式，它提供支撑国民经济建设与发展的基础产品。21世纪是农业发展的重要阶段，随着分子生物学的发展，生物基因库的建成，遗传工程的崛起，克隆技术和生物固氮技术的广泛应用，农业的面貌将为之一新。
+                        </p>
+                        <p class="link"><a href="cases/index.html#floor10"></a></p>
+                    </section>
+                </figure>
+            </li>
+        </ul>
+    </section>
+    <span class="more"><a href="cases/index.html">more</a></span>
 </section>
 
 <!--ABOUT-->
